Added font size and font family formatting

--- a/activity/menu.css
+++ b/activity/menu.css
@@ -36,7 +36,8 @@
 
  .nos-container,
  .formatting-container,
- .alignment-container {
+ .alignment-container,
+ .color-container {
      display: flex;
      justify-content: space-evenly;
      align-items: center;
